[Sync] Ensure referrer is recorded regardless of policy conversion

Previously recording the referrer was gated on logic checking if the referrer
policy could be mapped to an old value. Whether the policy maps or not should
not affect whether the referrer is set or not, just whether the obsolete
value is set or not.

BUG=729159

Review-Url: https://codereview.chromium.org/2921883003
Cr-Commit-Position: refs/heads/master@{#479088}

Former-commit-id: 59a1748c0349df8961742469156763529134c634