components/sessions/content/content_serialized_navigation_driver.cc
@@ -15,11 +15,6 @@ namespace sessions {
 
 namespace {
 
-const int kObsoleteReferrerPolicyAlways = 0;
-const int kObsoleteReferrerPolicyDefault = 1;
-const int kObsoleteReferrerPolicyNever = 2;
-const int kObsoleteReferrerPolicyOrigin = 3;
-
 ContentSerializedNavigationDriver* g_instance = nullptr;
 
 }  // namespace
@@ -57,45 +52,6 @@ ContentSerializedNavigationDriver::~ContentSerializedNavigationDriver() {
 
 int ContentSerializedNavigationDriver::GetDefaultReferrerPolicy() const {
   return blink::kWebReferrerPolicyDefault;
-}
-
-bool ContentSerializedNavigationDriver::MapReferrerPolicyToOldValues(
-    int referrer_policy,
-    int* mapped_referrer_policy) const {
-  switch (referrer_policy) {
-    case blink::kWebReferrerPolicyAlways:
-    case blink::kWebReferrerPolicyDefault:
-      // "always" and "default" are the same value in all versions.
-      *mapped_referrer_policy = referrer_policy;
-      return true;
-
-    case blink::kWebReferrerPolicyOrigin:
-      // "origin" exists in the old encoding.
-      *mapped_referrer_policy = kObsoleteReferrerPolicyOrigin;
-      return true;
-
-    default:
-      // Everything else is mapped to never.
-      *mapped_referrer_policy = kObsoleteReferrerPolicyNever;
-      return false;
-  }
-}
-
-bool ContentSerializedNavigationDriver::MapReferrerPolicyToNewValues(
-    int referrer_policy,
-    int* mapped_referrer_policy) const {
-  switch (referrer_policy) {
-    case kObsoleteReferrerPolicyAlways:
-    case kObsoleteReferrerPolicyDefault:
-      // "always" and "default" are the same value in all versions.
-      *mapped_referrer_policy = referrer_policy;
-      return true;
-
-    default:
-      // Since we don't know what encoding was used, we map the rest to "never".
-      *mapped_referrer_policy = blink::kWebReferrerPolicyNever;
-      return false;
-  }
 }
 
 std::string
