components/sessions/ios/ios_serialized_navigation_driver.h
@@ -26,10 +26,6 @@ class IOSSerializedNavigationDriver
 
   // SerializedNavigationDriver implementation.
   int GetDefaultReferrerPolicy() const override;
-  bool MapReferrerPolicyToOldValues(int referrer_policy,
-                                    int* mapped_referrer_policy) const override;
-  bool MapReferrerPolicyToNewValues(int referrer_policy,
-                                    int* mapped_referrer_policy) const override;
   std::string GetSanitizedPageStateForPickle(
       const SerializedNavigationEntry* navigation) const override;
   void Sanitize(SerializedNavigationEntry* navigation) const override;
